project(test)

add_subdirectory(raftExample)
add_subdirectory(rpcExample)

rsylar_add_executable(test_config "test_config.cc" rsylar)
rsylar_add_executable(test_env "test_env.cc" rsylar)
rsylar_add_executable(test_fiber "test_fiber.cc" rsylar)
rsylar_add_executable(test_log "test_log.cc" rsylar)
rsylar_add_executable(test_scheduler "test_scheduler.cc" rsylar)
rsylar_add_executable(test_scheduler1 "test_scheduler1.cc" rsylar)
rsylar_add_executable(test_thread "test_thread.cc" rsylar)
rsylar_add_executable(test_iomanager "test_iomanager.cc" rsylar)
rsylar_add_executable(test_hook "test_hook.cc" rsylar)
rsylar_add_executable(test_address "test_address.cc" rsylar)
rsylar_add_executable(test_socket "test_socket.cc" rsylar)
rsylar_add_executable(test_bytearray "test_bytearray.cc" rsylar)
rsylar_add_executable(test_tcp_server "test_tcp_server.cc" rsylar)
rsylar_add_executable(test_http "test_http.cc" rsylar)
rsylar_add_executable(test_http_parser "test_http_parser.cc" rsylar)
rsylar_add_executable(test_http_server "test_http_server.cc" rsylar)
rsylar_add_executable(test_daemon "test_daemon.cc" rsylar)
rsylar_add_executable(my_http_server "my_http_server.cc" rsylar)
rsylar_add_executable(test_http_connection "test_http_connection.cc" rsylar)
